sql: override StmtTimeout to 0 for background jobs
For background jobs and schema changes, our Internal
Executor inherits from cluster settings. If a statement
timeout is set cluster-wide, then background jobs will
respect this -- which does not make much sense; thus,
this patch overrides the StmtTimeout to 0s for background
jobs.

Fixes: #126261
Release note (bug fix): Background jobs no longer respect
a statement timeout.

--- a/pkg/sql/tests/BUILD.bazel
+++ b/pkg/sql/tests/BUILD.bazel
@@ -40,6 +40,7 @@ go_test(
         "hash_sharded_test.go",
         "impure_builtin_test.go",
         "inverted_index_test.go",
+        "job_statement_timeout_test.go",
         "kv_test.go",
         "main_test.go",
         "max_open_txns_test.go",
